# figure_finder

./: CMakeLists.txt  CMakePresets.json  README.md  __test_main.cpp  experiments.cpp  test_main.cpp
.github/workflows/: build_cmake.yml
cmake/: CompilerOptions.cmake
include/: API.h  core.h  figure_finder.h
include/core/: types.h  utils.h
scripts/: repetition_test.sh
src/: core.cpp  figure_finder.cpp
src/core/: utils.cpp
tests/: rnd.cpp  rnd.h  t-figure_finder.cpp  t-figure_test_data.h  t-index.cpp  t-index.h
